Library/AXL(Library)/Visual Basic(Net)/AXA.vb

Option Strict Off
Option Explicit On
Module AXA

    '*****************************************************************************
    '/****************************************************************************
    '*****************************************************************************
    '**
    '** File Name
    '** ----------
    '**
    '** AXA.VB
    '**
    '** COPYRIGHT (c) AJINEXTEK Co., LTD
    '**
    '*****************************************************************************
    '*****************************************************************************
    '**
    '** Description
    '** -----------
    '** Ajinextek Analog Library Header File
    '** 
    '**
    '*****************************************************************************
    '*****************************************************************************
    '**
    '** Source Change Indices
    '** ---------------------
    '** 
    '** (None)
    '**
    '**
    '*****************************************************************************
    '*****************************************************************************
    '**
    '** Website
    '** ---------------------
    '**
    '** http://www.ajinextek.com
    '**
    '*****************************************************************************
    '*****************************************************************************
    '*/
    '

'========== Board and verification API group of module information =================================================================================
'Verify if AIO module exists
Public Declare Function AxaInfoIsAIOModule Lib "AXL.dll" (ByRef upStatus As Integer) As Integer


'Verify AIO module number
Public Declare Function AxaInfoGetModuleNo Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal lModulePos As Integer, ByRef lpModuleNo As Integer) As Integer


'Verify the number of AIO module
Public Declare Function AxaInfoGetModuleCount Lib "AXL.dll" (ByRef lpModuleCount As Integer) As Integer


'Verify the number of input channels of specified module
Public Declare Function AxaInfoGetInputCount Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef lpCount As Integer) As Integer


'Verify the number of output channels of specified module
Public Declare Function AxaInfoGetOutputCount Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef lpCount As Integer) As Integer


'Verify the first channel number of specified module
Public Declare Function AxaInfoGetChannelNoOfModuleNo Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef lpChannelNo As Integer) As Integer


'Verify the first Input channel number of specified module (Inputmodule, Integration for input/output Module)
Public Declare Function AxaInfoGetChannelNoAdcOfModuleNo Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef lpChannelNo As Integer) As Integer


'Verify the first output channel number of specified module (Inputmodule, Integration for input/output Module)
Public Declare Function AxaInfoGetChannelNoDacOfModuleNo Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef lpChannelNo As Integer) As Integer


'Verify base board number, module position and module ID with specified module number
Public Declare Function AxaInfoGetModule Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef lpBoardNo As Integer, ByRef lpModulePos As Integer, ByRef upModuleID As Integer) As Integer


'Verify specified module board : Sub ID, module name, module description                                                                   <<<<<
'======================================================'
' support product : EtherCAT
' upModuleSubID        : EtherCAT SubID(for distinguish between EtherCAT modules)
' szModuleName            : model name of module(50 Bytes)
' szModuleDescription  : description of module(80 Bytes)
'======================================================'
Public Declare Function AxaInfoGetModuleEx Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef upModuleSubID As Integer, ByVal szModuleName As String, ByVal szModuleDescription As String) As Integer


'Verify Module status of specified module board
Public Declare Function AxaInfoGetModuleStatus Lib "AXL.dll" (ByVal lModuleNo As Integer) As Integer


'========== API group of input module information search ====================================================================================
'Verify module number with specified input channel number
Public Declare Function AxaiInfoGetModuleNoOfChannelNo Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef lpModuleNo As Integer) As Integer


'Verify the number of entire channels of analog input module
Public Declare Function AxaiInfoGetChannelCount Lib "AXL.dll" (ByRef lpChannelCount As Integer) As Integer


'========== API group for setting and verifying of input module interrupt ============================================================
'Use window message, callback API or event method in order to get event message into specified channel. Use for the time of collection action( refer AxaStartMultiChannelAdc ) of continuous data by H/W timer
'(Timer Trigger Mode, External Trigger Mode)
'Use Windows message and callback function or event method to receive an interrupt message to the specified module.
'========= Interrupt-related function ======================================================================================
'The callback function method has the advantage that the event can be notified very quickly because the callback function is called immediately at the time of the occurrence of the event.
'But, The main process is stalled until the callback function is completely terminated.
'In other words, Care must be taken when there is work load in the callback function.
'The event method is a method of continuously detecting and processing the occurrence of an interrupt by using a thread.
'The event method has the disadvantage that system resources are occupied by thread, but it has the advantage that interrupts can be detected and processed the fastest.
'This method is not commonly used. but it is used when quick interrupt handling is main concern.
'The event method uses a specific thread to monitor the occurrence of an event, and it works independently of the main process.
'So, This is the recommended method because it enables the most efficient use of resources in a multiprocessor system.
'Use a Window message or callback function to receive interrupt message.
'(Message handle, Message ID, Callback function, Interrupt event)
'    hWnd        : Used to receive window handles and window messages. If not, enter NULL.
'    uMessage    : Massage of window handle. To not use this or use the default value, enter 0.
'    proc        : Pointer of the function to be called when an interrupt occurs. To not use this, enter NULL.
'    pEvent      : Event handling when using event method.
Public Declare Function AxaiEventSetChannel Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal hWnd As Integer, ByVal uMesssage As Integer, ByVal pProc As Integer, ByRef pEvent As Integer) As Integer


'Set whether to use event in specified input channel
'======================================================'
' uUse       : DISABLE(0)   ' Event Disable
'            : ENABLE(1)    ' Event Enable
'======================================================'
Public Declare Function AxaiEventSetChannelEnable Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal uUse As Integer) As Integer


'Verify whether to use event in specified input channel
'======================================================'
' *upUse     : DISABLE(0)   ' Event Disable
'            : ENABLE(1)    ' Event Enable
'======================================================'
Public Declare Function AxaiEventGetChannelEnable Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef upUse As Integer) As Integer


'Set whether to use event in specified multiple input channels
'======================================================'
'lSize       : Number of input channel
' uUse       : DISABLE(0)' Event Disable
'            : ENABLE(1)    ' Event Enable
'======================================================'
Public Declare Function AxaiEventSetMultiChannelEnable Lib "AXL.dll" (ByVal lSize As Integer, ByRef lpChannelNo As Integer, ByVal uUse As Integer) As Integer


'Set kind of event in specified input channel
'======================================================'
' uMask      : DATA_EMPTY(1)
'            : DATA_MANY(2)
'            : DATA_SMALL(3)
'            : DATA_FULL(4)
'======================================================'
Public Declare Function AxaiEventSetChannelMask Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal uMask As Integer) As Integer


'Verify kind of event in specified input channel
'======================================================'
' *upMask    : DATA_EMPTY(1)
'            : DATA_MANY(2)
'            : DATA_SMALL(3)
'            : DATA_FULL(4)
'======================================================'
Public Declare Function AxaiEventGetChannelMask Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef upMask As Integer) As Integer


'Set kind of event in specified multiple input channels
'=============================================================================='
' uMask      : DATA_EMPTY(1)
'            : DATA_MANY(2)
'            : DATA_SMALL(3)
'            : DATA_FULL(4)
'=============================================================================='
Public Declare Function AxaiEventSetMultiChannelMask Lib "AXL.dll" (ByVal lSize As Integer, ByRef lpChannelNo As Integer, ByVal uMask As Integer) As Integer


'Verify event occurrence position
'=============================================================================='
' *upMode    : AIO_EVENT_DATA_UPPER(1)
'            : AIO_EVENT_DATA_LOWER(2)
'            : AIO_EVENT_DATA_FULL(3)
'            : AIO_EVENT_DATA_EMPTY(4)
'=============================================================================='
Public Declare Function AxaiEventRead Lib "AXL.dll" (ByRef lpChannelNo As Integer, ByRef upMode As Integer) As Integer


'Set interrupt mask of specified module. (SIO-AI4RB is not supportive.)
'=================================================================================================='
' uMask      : SCAN_END(1)
'            : FIFO_HALF_FULL(2)
'=================================================================================================='
Public Declare Function AxaiInterruptSetModuleMask Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal uMask As Integer) As Integer


'Verify interrupt mask of specified module
'=================================================================================================='
' *upMask    : SCAN_END(1)
'            : FIFO_HALF_FULL(2)
'=================================================================================================='
Public Declare Function AxaiInterruptGetModuleMask Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef upMask As Integer) As Integer


'========== API group for setting and verifying of input module parameter ========================================================================
'Set the input voltage range in specified input channel
'=================================================================================================='
' AI4RB
' dMinVolt    : -10V/-5V/0V
' dMaxVolt    : 10V/5V/
'
' AI16Hx
' dMinVolt    : -10V Fix
' dMaxVolt    : 10V Fix
'=================================================================================================='
Public Declare Function AxaiSetRange Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dMinVolt As Double, ByVal dMaxVolt As Double) As Integer

